# Clipper

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  clipper.rc  migemo-compact-dict
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-08-alt-key-shortcut-plan.md  2026-07-08-exclude-apps-plan.md  2026-07-08-snippet-folder-fallback-and-sort-plan.md
docs/superpowers/specs/: 2026-07-08-alt-key-shortcut-design.md  2026-07-08-exclude-apps-design.md  2026-07-08-snippet-folder-fallback-and-sort-design.md
src/: config.rs  darkmode.rs  dict.rs  filter.rs  hook.rs  main.rs  state.rs  ui.rs  util.rs  win32.rs  wndproc.rs
