[package]
name = "clipper"
version = "0.1.3"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
rustmigemo = { git = "https://github.com/oguna/rustmigemo.git" }
regex = "1.11"

[build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
