[package]
name = "clipper"
version = "0.1.12"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
serde_json = "1.0"
rustmigemo = { git = "https://github.com/oguna/rustmigemo.git" }
regex = "1.11"
minijinja = { version = "2.0", default-features = false, features = [
    "builtins",
    "serde",
] }
windows = { version = "0.58", features = ["Data_Xml_Dom", "UI_Notifications"] }

[build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
